--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A TDD Approach to Building a Todo API Using Node.js and MongoDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,12 @@
     "method-override": "^2.3.6",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0"
+  },
+  "dependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "should": "^9.0.2",
+    "sinon": "^1.17.4",
+    "sinon-mongoose": "^1.2.1"
   }
 }
