--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^2.5.3",
     "should": "^9.0.2",
     "sinon": "^1.17.4",
-    "sinon-mongoose": "^1.2.1"
+    "sinon-mongoose": "^1.2.1",
+    "supertest": "^1.2.0"
   }
 }
